feat(release): implement the menu component

--- a/src/app/features/release/pages/main/main.component.html
+++ b/src/app/features/release/pages/main/main.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-column gap-1">
-  Menu goes here
+  <app-menu />
   <div class="pe-2 ps-2">
     <router-outlet />
   </div>
