--- a/src/app/features/release/pages/release-list/release-list.component.html
+++ b/src/app/features/release/pages/release-list/release-list.component.html
@@ -4,4 +4,34 @@
   <app-release-card [release]="release" *ngFor="let release of releaseResponse.content"></app-release-card>
 </div>
 
+<div class="d-flex justify-content-center mt-3">
+  <nav aria-label="Page navigation example">
+    <ul class="pagination">
+      <li class="page-item">
+        <a (click)="goToFirstPage()" class="page-link" href="javascript:void(0)" aria-label="Previous" [class.disabled]="page === 0">
+          <i class="fa-solid fa-angles-left"></i>
+        </a>
+      </li>
+      <li class="page-item">
+        <a (click)="goToPreviousPage()" class="page-link" href="javascript:void(0)" aria-label="Previous" [class.disabled]="page === 0">
+          <i class="fa-solid fa-angle-left"></i>
+        </a>
+      </li>
+      <li class="page-item" *ngFor="let _ of [].constructor(this.releaseResponse.totalPages); let pageIndex = index">
+        <a (click)="gotToPage(pageIndex)" class="page-link" [class.active]="page === pageIndex" href="javascript:void(0)">{{ pageIndex + 1 }}</a>
+      </li>
+      <li class="page-item">
+        <a (click)="goToNextPage()" class="page-link" href="javascript:void(0)" aria-label="Next" [class.disabled]="isLastPage">
+          <i class="fa-solid fa-chevron-right"></i>
+        </a>
+      </li>
+      <li class="page-item">
+        <a (click)="goToLastPage()" class="page-link" href="javascript:void(0)" aria-label="Next" [class.disabled]="isLastPage">
+          <i class="fa-solid fa-angles-right"></i>
+        </a>
+      </li>
+    </ul>
+  </nav>
+</div>
+
 
