--- a/src/app/features/release/pages/release-list/release-list.component.html
+++ b/src/app/features/release/pages/release-list/release-list.component.html
@@ -1,7 +1,20 @@
 <h3>Books list</h3>
+<div
+  *ngIf="message"
+  class="alert "
+  [class.alert-danger]="level==='error'"
+  [class.alert-success]="level==='success'"
+  role="alert"
+>
+  <p>{{message}}</p>
+</div>
 <hr />
 <div class="d-flex justify-content-start gap-2 flex-wrap">
-  <app-release-card [release]="release" *ngFor="let release of releaseResponse.content"></app-release-card>
+  <app-release-card 
+    [release]="release" 
+    *ngFor="let release of releaseResponse.content" 
+    (borrow)="borrowRelease($event)"
+    />
 </div>
 
 <div class="d-flex justify-content-center mt-3">
